Bug 319294 - Thumbnails disappear when stretching Thumbnail column in Table view [patch]
Summary: Thumbnails disappear when stretching Thumbnail column in Table view [patch]
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Thumbs-Image (other bugs)
Version First Reported In: 3.2.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-04 00:12 UTC by nurupo
Modified: 2017-07-14 04:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.0
Sentry Crash Report:


Attachments
patch_319294.diff (792 bytes, patch)
2013-05-04 00:16 UTC, nurupo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nurupo 2013-05-04 00:12:22 UTC
When stretching Thumbnail column in Table view with thumbnails set to 256, thumbnails will disappear and digiKam would complain "digikam(27871)/digikam (core): ThumbnailLoadThread::load: Thumbnail size  337  is larger than  256 . Refusing to load.".
It does that when columns width is greater than `ThumbnailSize::Huge` (256).
DigiKam shouldn't use the column's width as an thumbnails' width and pass it to  `ThumbnailLoadThread::load`, since column's width is irrelevant from thumbnails' width. User can set arbitrary width of the column and changing column's width doesn't resize thumbnails. 

Reproducible: Always

Steps to Reproduce:
1. Open digiKam with some images shown.
2. Switch to Table view.
3. Increase thumbnails' size to 256 by using the zoom slider.
4. Stretch the Thumbnail column of the Table view.
Actual Results:  
When stretching the Thumbnail column too much (>256px), thumbnails disappear.

Expected Results:  
When stretching the Thumbnail column too much (>256px), thumbnails don't disappear.
Comment 1 nurupo 2013-05-04 00:16:31 UTC
Created attachment 79681 [details]
patch_319294.diff

Since column's width is irrelevant to thumbnail's width, don't use it as size parameter.
Comment 2 Michael G. Hansen 2013-05-04 11:24:05 UTC
Git commit 885ccad530ba0ed23421f774a06a0f65c6d27fab by Michael Georg Hansen.
Committed on 04/05/2013 at 13:22.
Pushed by mghansen into branch 'master'.

Fix thumbnails disappearing when columns are too wide.

The idea here is that for landscape images, we adjust the height to
to be as high as the row height as long as the width can stretch enough
because the column is wider than the thumbnail size.
However, digiKam limits the thumbnail size to 256, so we also do that here.

M  +9    -1    digikam/views/tableview_column_thumbnail.cpp

http://commits.kde.org/digikam/885ccad530ba0ed23421f774a06a0f65c6d27fab